[package]
name = "tokens"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"
prettytable = "0.10.0"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
rpassword = "7.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tempdir = "0.3.7"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
httpmock = "0.6"
tempfile = "3"
mockito = "1.7.0"
